// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: CourseCard snapshots not-passed, prereq-not-passed, no-completed, >1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots not-selected, no-prereq, completed-fail, >1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletionFailedSubtitle card-subtitle h6"
      >
        Completed: F
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots not-selected, no-prereq, completed-pass, >1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      >
        Completed: A
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots not-selected, no-prereq, no-completed, >1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots not-selected, no-prereq, no-completed, >1 credit, 1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots not-selected, no-prereq, no-completed, 1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          1 Credit
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots selected, no-prereq, no-completed, >1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard active card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots selected-not-passed, no-prereq, no-completed, >1 credit, >1 courseType 1`] = `
<DocumentFragment>
  <div
    class="courseCard card"
    title="ZZZ1001"
  >
    <div
      class="card-body"
    >
      <div
        class="cardTitle card-title h5"
      >
        Sample1
      </div>
      <p
        class="courseSelectDetails card-text"
      >
        <span
          class="courseCodeText"
        >
          ZZZ1001
        </span>
        <span
          class="courseCredits"
        >
          4 Credits
        </span>
      </p>
      <div
        class="cardCompletedSubtitle card-subtitle h6"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`component: CourseCard snapshots should show only course types if no prereqs given 1`] = `
<div
  class="fade show tooltip bs-tooltip-top-start"
  id="ZZZ1001-PrereqsTooltip"
  role="tooltip"
  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
  x-placement="top-start"
>
  <div
    class="arrow"
  />
  <div
    class="tooltip-inner"
  >
    <div
      class="coursePrereq"
    />
    <div
      class="courseTypes"
    >
      <b>
         Course Type: 
      </b>
      L | T | P
    </div>
  </div>
</div>
`;

exports[`component: CourseCard snapshots should show prereq tooltip if prereqs given 1`] = `
<div
  class="fade show tooltip bs-tooltip-top-start"
  id="ZZZ1001-PrereqsTooltip"
  role="tooltip"
  style="position: absolute; top: 0px; left: 0px; opacity: 0; pointer-events: none;"
  x-placement="top-start"
>
  <div
    class="arrow"
  />
  <div
    class="tooltip-inner"
  >
    <div
      class="coursePrereq"
    >
      <span>
        <b>
          Pre-Requisites: 
        </b>
        ZZZ1004
        <br />
        <br />
      </span>
      <span>
        <b>
          Co-Requisites: 
        </b>
        ZZZ1002
        <br />
        <br />
      </span>
      <span>
        <b>
          Anti-Requisites: 
        </b>
        ZZZ1003
        <br />
        <br />
      </span>
    </div>
    <div
      class="courseTypes"
    >
      <b>
         Course Type: 
      </b>
      L | T | P
    </div>
  </div>
</div>
`;
